Adding alignment, partial loading